<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/serenity"
    tools:context=".PERFIL">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nome"
        android:layout_alignStart="@+id/nome"
        android:layout_marginBottom="-152dp"
        android:text="@string/nome2"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nascimento"
        android:layout_alignStart="@+id/textView"
        android:text="@string/nascimento"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:layout_alignStart="@+id/textView"
        android:text="@string/email2"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/senha"
        android:layout_alignStart="@+id/textView"
        android:text="@string/senha2"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/nome"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/salvar"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/email"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="145dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/nascimento"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="227dp"
        android:ems="10"
        android:inputType="date" />

    <Button
        android:id="@+id/salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="11dp"
        android:text="@string/salvo"
        android:onClick="clickSalvar"
        android:textSize="22sp"
        android:layout_alignParentRight="true" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="147dp"
        android:layout_height="104dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        app:srcCompat="@drawable/userperfil" />

</RelativeLayout>